# semantic_skeletonizer

./: .gitignore  Cargo.toml  README.md  product.md  test.ts  test_oxc.rs  test_serialize.rs
docs/: NOTEBOOKLM_VIDEO_BRIEF.md
scripts/: bench.py
skills/: README.md
skills/api-docs/: SKILL.md
skills/architecture-map/: SKILL.md
skills/blast-radius/: SKILL.md
skills/circular-deps/: SKILL.md
skills/codebase-tour/: SKILL.md
skills/component-inventory/: SKILL.md
skills/coupling-hotspots/: SKILL.md
skills/dead-exports/: SKILL.md
skills/dependency-audit/: SKILL.md
skills/type-coupling/: SKILL.md
skills/untested-exports/: SKILL.md
src/: dashboard.rs  graph.rs  main.rs  protocol.rs  resolve.rs  skeleton.rs  watcher.rs
tests/: integration.rs
