[package]
name = "semantic_skeletonizer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
dashmap = "6.1.0"
ignore = "0.4.25"
notify = "8.2.0"
oxc_allocator = "0.115.0"
oxc_ast = { version = "0.115.0", features = ["serialize"] }
oxc_ast_visit = "0.115.0"
oxc_codegen = "0.115.0"
oxc_parser = "0.115.0"
oxc_span = "0.115.0"
oxc_syntax = "0.115.0"
serde = "1.0.228"
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
tokio-util = { version = "0.7.18", features = ["io"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
